12/07/2004
----------
1. Deutsch lang file translation update
   (thanks to Martin Bronk, martin.AT.bronk.de)
2. add new option enable_saprefs to openwebmail.conf
   This option would allow users to edit the testrules, whitelist and
   blacklist in the spamassassin userprefs file (~/.spamassassin/userprefs)


12/05/2004
----------
1. new iconset: Cool3D.Spanish
   (thanks to Jaime Caballero, master.AT.xanum.uam.mx)
2. fix a minor bug in auth_ldap.pl which always used the ou=people for
   authentication no matter what ou is set to in auth_ldap.conf
   (thanks to bjacint, bjacint.AT.kvark.hu for his fix)


12/02/2004
----------
1. fix a minor bug in adrbook.pl which may generate invalid vcard in
   addressbook conversion if an entry in old addressbook has no name defined.
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his fix)


12/01/2004
----------
1. return false in html editor compatibility test for browser Opera
   in openwebmail-send


11/29/2004
----------
1. add -u (--unlock) option to openwebmail-tool.pl,
   it removes the file locks for specific openwebmail user by killing the
   processes holding the locks
ps: This function requires the program 'lsof',
    lsof is available at http://people.freebsd.org/~abe/


11/27/2004
----------
1. fix the color of listview in addressbook when lightbar is disabled
   (thanks to Alex Teslik, alex.AT.acatysmoof.com)
2. Hungarian language file translation update
   (thanks to Posz Marton, ful_s.AT.fazekas.hu)


11/26/2004
----------
1. Bulgarian language and template files translation update
   (thanks to Veselin Slavov, vess.AT.slavof.net)
2. fix a but that addressbook related function in message reading/composing
   was not disabled when option enable_addressbook is set to no
3. fix a problem in mime.pl that encode_mimewords didn't encode two bytes of
   a big5 char as a whole
   (reported by wongyf.AT.mail.savs.ilc.edu.tw)


11/25/2004
----------