@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041207
+releasedate		20041208
 
 ##############################################################################
 # host dependent configuration
